<resources>
    <string name="app_name">TelemedicineApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Register</string>
    <string name="title_activity_registration_role">RoleSelectionActivity</string>
    <string name="roleSelectionTitle">Select your role</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="back">Back</string>
    <string name="registration">Registration</string>
    <string name="fullname">Full name</string>
    <string name="username">Username</string>
    <string name="birthDate">Birth Date (mm/dd/yyyy)</string>
    <string name="gender">Gender (M\\F)</string>
    <string name="phoneNumber">Phone Number (xxx-xxx-xxxx)</string>
    <string name="password2">Reenter password</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_successul_registration">SuccessulRegistrationActivity</string>
    <string name="successRegistration">Successful Registration</string>
    <string name="title_activity_patient_home">patientHomeActivity</string>
    <string name="title_activity_chat">Chat</string>
    <string name="ssn">Last 4 digits of SSN</string>
    <string name="visitHelp">The visit summary is where you can go to view information on your past visits with all of your doctors. You
        will be able to see your diagnoses, vitals, any medications prescribed, follow up instructions and patient instructions.
        If you believe that there is a mistake in your visit summary please contact your office.
    </string>
    <string name="labResultsHelp">The lab results page is where you can go to view information on your past labs with all of your doctors. You
        will be able to see your results, normal values, location, notes and which doctor ordered the lab.
        If you believe that there is a mistake in your lab results please contact your office.
    </string>
    <string name="rxHelp">The prescriptions page is where you can go to view information on your current medications. You
        will be able to see your prescriptions, dosages, instructions, and prescribing doctor.
        If you believe that there is a mistake in your prescriptions please contact your office.
    </string>
    <string name="chatHelp">The chat page is where you are able to go to message your doctor or to video chat with them. It will show you if your doctor is
        available for live chat or video chat. If your doctor is not available they will respond at their earliest ability.
    </string>
    <string name="apptHelp">The appointments page is where you go to request an appointment for your doctors. You will select a day, time, and doctor you
        would like to see and it will forward a message to the scheduling desk and if those times work they will schedule you and call you to confirm.
    </string>
    <string name="ProfileHelp">The profile page is where you can go to view and update your username, name or email. You will also be able to view your
        patient ID but will not be able to make any changes.
    </string>
    <string name="patientsHelp">The patients page is where you can go to view a list of all your patients currently under your care.
    </string>
    <string name="chatHelpDr">The chat page is where you go to respond to patient messages or video chats.
    </string>
    <string name="apptHelpDr">The appointments page is where you go to view your appointments scheduled for a certain day.
    </string>
    <string name="ProfileHelpDr">The profile page is where you can go to view and update your username, name or email. You will also be able to view your
        credentials but will not be able to make any changes.
    </string>
    <string name="private_app_id">8d0d405d01a340bca7f0269a4a7224bf</string>

</resources>
